# meeting-assistant

./: .gitignore  CLAUDE.md  README.md  README_CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/advisor/: engine.rs  mod.rs  rules.rs  templates.rs
src-tauri/src/audio/: buffer.rs  capture.rs  mod.rs
src-tauri/src/documents/: loader.rs
src-tauri/src/storage/: config.rs  history.rs  mod.rs
src-tauri/src/transcript/: store.rs
src-tauri/src/whisper/: downloader.rs  engine.rs  mod.rs
src/components/full/: CopilotPanel.tsx  FullView.tsx  Sidebar.tsx  TranscriptPanel.tsx
src/components/history/: MeetingHistory.tsx
src/components/narrow/: AdvicePanel.tsx  ControlBar.tsx  NarrowView.tsx  SummaryPanel.tsx  TranscriptMini.tsx
src/components/settings/: AudioSettings.tsx  LLMSettings.tsx  ProfileSettings.tsx  SettingsView.tsx
src/components/shared/: AdviceCard.tsx  SetupGuide.tsx
src/hooks/: useRecording.ts  useTauriEvents.ts
src/lib/: tauri.ts  types.ts
src/styles/: globals.css
templates/: brainstorm.json  code-review.json  project-sync.json  tech-review.json
