[package]
name = "meeting-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
sherpa-onnx = "1.12"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
tauri-plugin-dialog = "2"
futures-util = "0.3"
bzip2 = "0.5"
tar = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
